# exceptionless-rs

./: .gitignore  Cargo.toml  README.md
.github/agents/: squad.agent.md
.github/workflows/: ci.yml  dependency-audit.yml  publish.yml  release.yml
.squad/: decisions.md  routing.md  team.md
.squad/agents/amy/: charter.md  history.md  mvp-test-matrix.md
.squad/agents/amy-1/: history.md
.squad/agents/bender/: charter.md  history.md
.squad/agents/farnsworth/: charter.md  history.md
.squad/agents/fry/: charter.md  history.md
.squad/agents/fry-1/: history.md
.squad/agents/leela/: charter.md  history.md
.squad/agents/leela-2/: history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: amy-diagnose-cargo-test.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-19T23-03-55.309Z-final-batch-closure.md  2026-05-20T08-28-01.000Z-dependency-minimization-http-slice.md  2026-05-20T08-28-01Z-dependency-minimization-first-slice.md  2026-05-20T11-00-42.108Z-dependency-minimization-opt-out-feature.md  2026-05-20T12-53-27.948Z-release-workflow-merge.md  2026-05-21T14-00-05.543Z-rustdoc-pr-closeout.md
.squad/orchestration-log/: 2026-05-19T23-03-55.309Z-amy.md  2026-05-19T23-03-55.309Z-bender.md  2026-05-19T23-03-55.309Z-farnsworth.md  2026-05-20T08-28-01.000Z-amy.md  2026-05-20T08-28-01.000Z-farnsworth.md  2026-05-20T08-28-01.000Z-leela.md  2026-05-20T08-28-01Z-amy.md  2026-05-20T08-28-01Z-bender.md  2026-05-20T08-28-01Z-leela.md  2026-05-20T11-00-42.108Z-amy.md  2026-05-20T11-00-42.108Z-bender.md  2026-05-20T11-00-42.108Z-farnsworth.md  2026-05-20T11-00-42.108Z-leela.md  2026-05-20T12-53-27.948Z-amy.md  2026-05-20T12-53-27.948Z-farnsworth.md  2026-05-20T12-53-27.948Z-fry.md  2026-05-21T14-00-05.543Z-leela.md
.squad/skills/api-rename-feedback-loop/: SKILL.md
.squad/skills/dependency-audit-workflow/: SKILL.md
.squad/skills/dependency-floor-audit/: SKILL.md
.squad/skills/dependency-pruning-proof/: SKILL.md
.squad/skills/dependency-surface-slicing/: SKILL.md
.squad/skills/manual-crates-publish/: SKILL.md
.squad/skills/observable-transport-contract/: SKILL.md
.squad/skills/public-dependency-surface-audit/: SKILL.md
.squad/skills/reference-first-slice/: SKILL.md
.squad/skills/release-artifact-scaffolding/: SKILL.md
.squad/skills/telemetry-mvp-testing/: SKILL.md
.squad/templates/: issue-lifecycle.md  squad.agent.md.template
.squad/templates/skills/pr-review-response/: SKILL.md
examples/: config_custom.rs  error_basic.rs  feature_track.rs  log_structured.rs  retry_transport.rs
src/: builder.rs  client.rs  config.rs  error.rs  event.rs  feature.rs  lib.rs  log.rs
src/transport/: http.rs  mod.rs  response.rs  retry.rs
src/wire/: error.rs  event.rs  mod.rs
tests/: acceptance_errors.rs  acceptance_feature_usage.rs  acceptance_logs.rs  regression_error_stack_trace.rs  regression_submission_path.rs  transport_retry.rs
tests/support/: mod.rs
