[package]
name = "exceptionless"
authors = ["Christian Helle"]
description = "Async Rust client for Exceptionless error, log, and feature usage events"
documentation = "https://docs.rs/exceptionless"
homepage = "https://exceptionless.com"
readme = "README.md"
repository = "https://github.com/christianhelle/exceptionless-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["exceptionless", "logging", "errors", "telemetry", "async"]
categories = ["api-bindings", "development-tools::debugging", "web-programming::http-client"]
exclude = [".copilot/**", ".github/**", ".squad/**", "AUDIT_CRATES_IO_READINESS.md", "plan.md"]

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
