[package]
name = "exceptionless"
authors = ["Christian Helle"]
description = "Rust client for Exceptionless tracking errors, log messages, and feature usage events"
documentation = "https://docs.rs/exceptionless"
homepage = "https://exceptionless.com"
readme = "README.md"
repository = "https://github.com/christianhelle/exceptionless-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["exceptionless", "logging", "errors", "telemetry"]
categories = ["api-bindings", "development-tools::debugging", "web-programming::http-client"]
exclude = [".copilot/**", ".github/**", ".squad/**"]

[features]
default = ["http"]
http = ["dep:reqwest"]

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "error_basic"
required-features = ["http"]

[[example]]
name = "log_structured"
required-features = ["http"]

[[example]]
name = "feature_track"
required-features = ["http"]

[[example]]
name = "config_custom"
required-features = ["http"]
