[package]
name = "exceptionless"
authors = ["Christian Helle"]
description = "Rust client for Exceptionless tracking errors, log messages, and feature usage events"
documentation = "https://docs.rs/exceptionless"
homepage = "https://exceptionless.com"
readme = "README.md"
repository = "https://github.com/christianhelle/exceptionless-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["exceptionless", "logging", "errors", "telemetry"]
categories = ["api-bindings", "development-tools::debugging", "web-programming::http-client"]
exclude = [".copilot/**", ".github/**", ".squad/**"]

[features]
default = []
opt-out = []

[dependencies]
async-trait = "0.1"
backtrace = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
retry-policies = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["time"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "error_basic"

[[example]]
name = "log_structured"

[[example]]
name = "feature_track"

[[example]]
name = "config_custom"
